src/objects/csord__Service__c.object
<CustomObject>
    <description>A model of a service provided to a customer. A Service has a recurring component.</description>
    <fields>
        <fullName>Address_Number__c</fullName>
        <formula>LG_Address__r.LG_AddressID__c</formula>
        <label>Address Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>LG_Address__r.cscrm__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>LG_Address__r.cscrm__Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
  <fields>
        <fullName>House_Number__c</fullName>
        <formula>LG_Address__r.LG_HouseNumber__c</formula>
        <label>House Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseNumberExtension__c</fullName>
        <formula>LG_Address__r.LG_HouseNumberExtension__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HouseNumberExtension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Name__c</fullName>
        <formula>LG_Address__r.Name</formula>
        <label>Premise Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Number__c</fullName>
        <formula>LG_Address__r.LG_PremiseNumber__c</formula>
        <label>Premise Number</label>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>State_Province__c</fullName>
        <formula>LG_Address__r.cscrm__State_Province__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State/Province</label>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>Street__c</fullName>
        <formula>LG_Address__r.cscrm__Street__c</formula>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <formula>LG_Address__r.cscrm__Zip_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Care_Billing_Account_Number__c</fullName>
        <description>Created for Care Track for Case Object Billing Account Number from Service</description>
        <formula>csord__Subscription__r.csconta__Billing_Account__r.LG_BillingAccountNumber__c</formula>
        <label>Case Billing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Care_Service_Billing_Number__c</fullName>
        <formula>csord__Subscription__r.csconta__Billing_Account__r.LG_BillingAccountNumber__c</formula>
        <label>Service Billing Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Care_Snoopy_URL_Parameter__c</fullName>
        <formula>LEFT( LG_Address__r.cscrm__State_Province__c , 1) &amp; LG_ProvisioningAccountNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snoopy URL Parameter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <formula>csord__Subscription__r.Billing_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Access_Technology__c</fullName>
        <label>Access Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Action__c</fullName>
        <formula>IF( ISPICKVAL(csordtelcoa__Delta_Status__c, &apos;Continuing In Subscription&apos;) &amp;&amp; ISPICKVAL(csord__Subscription__r.csordtelcoa__Change_Type__c, &apos;Move&apos;)  , &apos;Add&apos;, IF(ISBLANK( TEXT(csordtelcoa__Delta_Status__c)) &amp;&amp; LG_AttributeValuesChanged__c, &apos;Change&apos;, IF(ISBLANK( TEXT(csordtelcoa__Delta_Status__c)), &apos;Add&apos;, IF( ISPICKVAL(csordtelcoa__Delta_Status__c, &apos;Continuing In Subscription&apos;) &amp;&amp; csordtelcoa__Product_Configuration__r.LG_AttributeValuesChanged__c , &apos;Change&apos;, CASE(TEXT(csordtelcoa__Delta_Status__c), &apos;Added To Subscription&apos;, &apos;Add&apos;, &apos;Deleted From Subscription&apos;, &apos;Delete&apos;, &apos;None&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ActivateValid__c</fullName>
        <label>Activate Valid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Activate_Valid__c</fullName>
        <formula>csordtelcoa__Product_Configuration__r.LG_ActivateValid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activate Valid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Activationneeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activation Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_AddOnPriceItemAssociation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Add On Price Item Association</label>
        <referenceTo>cspmb__Price_Item_Add_On_Price_Item_Association__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_AddOn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Add On</label>
        <referenceTo>cspmb__Add_On_Price_Item__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Additional_Hour__c</fullName>
        <label>Additional Hour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Additional_Work_Note__c</fullName>
        <label>Additional Work Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_AreaCodes__c</fullName>
        <label>Area Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeValuesChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used when Service is New. Field is checked if there was a change in product configuration attributes, that have a flag &apos;Calculate Delta&apos; set to true, after the Activation Completed or Ready for Billing Service Status.</description>
        <label>Attribute values changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_BNumberShielding__c</fullName>
        <label>B-number shielding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingFrequency__c</fullName>
        <label>Billing Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BlockType__c</fullName>
        <label>Block Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_COMMAND_Service_ID__c</fullName>
        <label>COMMAND Service ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CallBarringLevel__c</fullName>
        <label>Call barring level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CallerID__c</fullName>
        <label>Caller ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Capability__c</fullName>
        <label>Capability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Care_Full_Address__c</fullName>
        <formula>IF( ISBLANK(LG_Address__r.cscrm__Street__c), &apos;&apos;, LG_Address__r.cscrm__Street__c) +
IF( ISBLANK(LG_Address__r.LG_HouseNumber__c), &apos;&apos;, &apos; &apos; + LG_Address__r.LG_HouseNumber__c) +
IF( ISBLANK(LG_Address__r.LG_HouseNumberExtension__c) , &apos;,&apos;, &apos; &apos; +LG_Address__r.LG_HouseNumberExtension__c+ &apos;,&apos;)+ 
IF( ISBLANK(LG_Address__r.cscrm__Zip_Postal_Code__c), &apos;&apos;, &apos; &apos; + LG_Address__r.cscrm__Zip_Postal_Code__c) +
IF( ISBLANK(LG_Address__r.cscrm__City__c), &apos;&apos;, &apos; &apos; + LG_Address__r.cscrm__City__c)</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ChangeTypeCode__c</fullName>
        <formula>CASE( LG_ChangeType__c , &quot;Add&quot;, &quot;401&quot;, &quot;New&quot;, &quot;401&quot;, &quot;Terminate&quot;, &quot;402&quot;, &quot;Change&quot;,&quot;403&quot;,&quot;Migrate&quot;,&quot;403&quot;, &quot;Contract Renewal&quot;, &quot;404&quot;, &quot;Retention&quot;, &quot;403&quot;,&quot;Move&quot;,&quot;405&quot;,&quot;&quot;,&quot;401&quot;, &quot;000&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Type Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ChangeType__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Contract Renewal</fullName>
                </value>
                <value>
                    <fullName>Migrate</fullName>
                </value>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Charge_Group_Name__c</fullName>
        <description>This is the Group charge Name to be populated from Product configuration object (output mapped) incase of BDS products like &apos;Company VPN Anywhere&apos; and &apos;Company VPN Connection&apos;</description>
        <label>LG Charge Group Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ConnectionRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connection Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ContractEndDate__c</fullName>
        <formula>csord__Subscription__r.LG_Contract__r.csconta__Valid_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_ContractStartDate__c</fullName>
        <formula>csord__Subscription__r.LG_Contract__r.csconta__Valid_From__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_ContractTerm__c</fullName>
        <label>Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DeactivationWishDate__c</fullName>
        <description>Holds the deactivation wish date request by the Customer</description>
        <label>Deactivation Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_DecompositionCriteria__c</fullName>
        <description>Used as a criteria for grouping the services to the suborders</description>
        <label>Decomposition Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LG_DecompositionCriteria</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_DeviatingBillingDate__c</fullName>
        <label>Deviating Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discount</label>
        <referenceTo>LG_Discount__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_DonorOperatorCode__c</fullName>
        <label>Donor Operator Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_EffectiveDate__c</fullName>
        <description>This is the date when the change requested in configuration was implemented from the customer perspective. Normally this translates to Start Date. If the Delta Status was delete, this would translate to End Date.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_ExternalSubscriptionName__c</fullName>
        <label>External Subscription Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_FailureReason__c</fullName>
        <label>Failure Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_From_Service__c</fullName>
        <description>This field is used to capture the FROM Service for BDS</description>
        <label>From Service</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Gesamt__c</fullName>
        <formula>LG_Quantity__c  *  csord__Total_Recurring_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LG_Gesamt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Hardware__c</fullName>
        <label>Hardware</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_IPAddressExtensionLegacy__c</fullName>
        <label>IP Address Extension (Legacy)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_IgnoreContractTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Contract Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_InstallDate__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_InstallValid__c</fullName>
        <label>Install Valid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Install_Valid__c</fullName>
        <formula>csordtelcoa__Product_Configuration__r.LG_InstallValid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Valid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstallationNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installation Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_InstallationPlannedDate__c</fullName>
        <label>Installation Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_InstallationType__c</fullName>
        <label>Installation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstallationWishDate__c</fullName>
        <label>Installation Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_InternetSecurityLegacy__c</fullName>
        <label>Internet Security (Legacy)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_InternetTypeLegacy__c</fullName>
        <label>Internet Type (Legacy)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MarketSegment__c</fullName>
        <label>Market Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MultiWifiAccessPoint__c</fullName>
        <label>Multi Wifi Access Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_NameTelephony__c</fullName>
        <label>Name Telephony</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Network_Type__c</fullName>
        <label>Network Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_OldSuborder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Suborder</label>
        <referenceTo>csord__Solution__c</referenceTo>
        <relationshipLabel>Services (Old Suborder)</relationshipLabel>
        <relationshipName>Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Phonenumbers__c</fullName>
        <label>Phone Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PinLegacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pin (Legacy)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_PortingCity__c</fullName>
        <label>Porting City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortingHouseNumberAddition__c</fullName>
        <label>Porting House Number Addition</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortingHouseNumber__c</fullName>
        <label>Porting House Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortingInitials__c</fullName>
        <label>Porting Initials</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortingName__c</fullName>
        <label>Porting Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortingPrefix__c</fullName>
        <label>Porting Prefix</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortingStreet__c</fullName>
        <label>Porting Street</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortingWishDate__c</fullName>
        <label>Porting Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_PortingZipcode__c</fullName>
        <label>Porting Zipcode</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    
    <fields>
        <fullName>LG_Primary_Access_Network__c</fullName>
        <label>Primary Access Network</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Primary_Access_Type__c</fullName>
        <label>Primary Access Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Primary_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ProductDefinitionName__c</fullName>
        <formula>csordtelcoa__Product_Configuration__r.cscfga__Product_Definition__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Definition Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ProductFamily__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ProductName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>cspmb__Price_Item__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Product_Category__c</fullName>
        <label>Product Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ProvisionValid__c</fullName>
        <label>Provision Valid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Provision_Valid__c</fullName>
        <formula>csordtelcoa__Product_Configuration__r.LG_ProvisionValid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provision Valid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ProvisioningAccountNo__c</fullName>
        <label>Provisioning Account No</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ProvisioningCode__c</fullName>
        <label>Provisioning Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LG_ProvisioningSystemID__c</fullName>
        <label>Cable Master ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ProvisioningSystem__c</fullName>
        <label>Provisioning System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>LG_RootOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Services (Root Order)</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>LG_ReasonforBillingDateDeviation__c</fullName>
        <label>Reason for Billing Date Deviation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need</fullName>
                </value>
                <value>
                    <fullName>Values</fullName>
                </value>
                <value>
                    <fullName>From</fullName>
                </value>
                <value>
                    <fullName>DWH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_SLA__c</fullName>
        <label>SLA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServiceExternalId__c</fullName>
        <label>Billing Service External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServiceStatus__c</fullName>
        <description>Pick-list to save the status of the service provisioning.</description>
        <label>Service Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                  <fullName>LG_SecondaryProductConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Services (Secondary Product Configuration)</relationshipLabel>
        <relationshipName>Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Secondary_Access_Network__c</fullName>
        <label>Secondary Access Network</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Secondary_Access_Type__c</fullName>
        <label>Secondary Access Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Secondary_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secondary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Service_Id__c</fullName>
        <label>Service Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SecondaryProductConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Services (Secondary Product Configuration)</relationshipLabel>
        <relationshipName>Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>cscrm__Site__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_SoftDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for versioning and tracking</description>
        <inlineHelpText>Indicates that the record is not relevant do to the change is active version (newer or older version exists and it is active)</inlineHelpText>
        <label>Soft Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Suborder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suborder</label>
        <referenceTo>csord__Solution__c</referenceTo>
        <relationshipLabel>Services (Suborder)</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_TelephonyPlusTypeLegacy__c</fullName>
        <label>Telephony Plus Type (Legacy)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TerminatedService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Terminated Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Services (Terminated Service)</relationshipLabel>
        <relationshipName>Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_TerminatedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Terminated Subscription</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Services (Terminated Subscription)</relationshipLabel>
        <relationshipName>Services2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_TestResult__c</fullName>
        <label>Test Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_To_Service__c</fullName>
        <label>To Service</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TypeOfPhoneRange__c</fullName>
        <label>Type Of Phone Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TypeTelephony__c</fullName>
        <label>Type (Telephony)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Persistent_Id__c</fullName>
        <description>Unique identifier for the VPN Site</description>
        <label>Persistent Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_State__c</fullName>
        <description>Temporary field created to load state on Attributes.</description>
        <label>Temp State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <formula>csord__Total_Recurring_Charges__c  *  LG_ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_AS_Number__c</fullName>
        <description>BGP Autonomous System Number</description>
        <inlineHelpText>BGP Autonomous System Number</inlineHelpText>
        <label>UM AS Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Announced_prefix__c</fullName>
        <description>BGP Title of issue</description>
        <inlineHelpText>BGP Title of issue</inlineHelpText>
        <label>UM Announced prefix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_BGP_Password__c</fullName>
        <description>Password for selection of workflow</description>
        <inlineHelpText>Password for selection of workflow</inlineHelpText>
        <label>UM BGP Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_BillingProductId__c</fullName>
        <label>Billing Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_CablemasterDate__c</fullName>
        <label>Cablemaster Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UM_Cancellation_Period__c</fullName>
        <defaultValue>3</defaultValue>
        <description>UM_Cancellation_Period__c</description>
        <inlineHelpText>Cancellatiob periof in Months.</inlineHelpText>
        <label>Cancellation Period (In Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Cancellation__c</fullName>
        <label>Cancellation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_CostCAPEX__c</fullName>
        <label>Cost (CAPEX)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_CostOPEX__c</fullName>
        <label>Cost (OPEX)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Customer_Company__c</fullName>
        <description>Account Name for JIRA form</description>
        <formula>LG_RootOrder__r.csord__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Customer_Number__c</fullName>
        <description>Account Number for JIRA Form</description>
        <formula>LG_RootOrder__r.csord__Account__r.LG_AccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Customer_Region__c</fullName>
        <description>Customer Region for JIRA Form</description>
        <formula>LG_RootOrder__r.csord__Account__r.UM_VisitStateProvince__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_CustomersInvoiceGroupingReference__c</fullName>
        <label>Customer&apos;s Invoice Grouping Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>